feat: update address

--- a/indiaos/templates/emails/ticket.html
+++ b/indiaos/templates/emails/ticket.html
@@ -119,9 +119,9 @@ h1, h2, h3, p, div, span {
 	<div class="ticket__body">
 		<section class="ticket__section">
 			<div class="heading">Venue</div>
-			<span>Zerodha Head Office
-			<br>#153/154, 4th Cross, J.P Nagar 4th Phase
-			<br>Opp. Clarence Public School
+			<span>Balan Farm Convention Center
+			<br>Nataraja Layout, Kothnur
+			<br>JP Nagar 8th Phase
 			<br>Bengaluru - 560078</span>
 		</section>
 		<div class="break"></div>
