feat: update cta

--- a/indiaos/templates/includes/navbar.html
+++ b/indiaos/templates/includes/navbar.html
@@ -24,7 +24,7 @@
 			{% endif %}
 			<div class="py-3 lg:py-0 text-left">
 				<a href="https://forum.indiaos.in" target="_blank" class="block font-base font-mono no-underline text-grey-darkest bg-yellow-400 px-3 py-2 rounded border-yellow-500 border-b-4 hover:border-yellow-600">
-					Join Our Forum
+					Join The Forum
 				</a>
 			</div>
 			{% if settings.ticketing == "Open" %}
